# realman

./: convert_onnx.py  export_to_trt.py  frames.gv  test.py  test_trt_inference.py
.catkin_tools/profiles/default/: build.yaml
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.fish  local_setup.sh  local_setup.zsh  setup.bash  setup.fish  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  _setup_util.py  local_setup.sh  setup.sh
devel/.private/control_arm_move/: .catkin  local_setup.sh
devel/.private/force_position_control/: .catkin
devel/.private/get_arm_state/: .catkin  .rosinstall  local_setup.fish
devel/.private/realsense2_camera/: .catkin  setup.sh
devel/.private/realsense2_description/: .catkin  local_setup.fish  local_setup.sh  setup.sh
devel/.private/rm_65_6f_moveit_config/: .catkin  .rosinstall
devel/.private/rm_65_moveit_config/: .catkin  local_setup.fish  local_setup.sh  setup.sh
devel/.private/rm_75_6f_moveit_config/: .catkin
devel/.private/rm_75_moveit_config/: .catkin  setup.sh
devel/.private/rm_bringup/: .catkin
devel/.private/rm_control/: .catkin  local_setup.sh  setup.sh
devel/.private/rm_demo/: .catkin  .rosinstall  local_setup.sh
devel/.private/rm_description/: .catkin  .rosinstall  local_setup.fish  setup.fish  setup.sh
devel/.private/rm_doc/: .catkin
devel/.private/rm_driver/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
devel/.private/rm_eco63_moveit_config/: .catkin  setup.fish  setup.sh
devel/.private/rm_eco65_6f_moveit_config/: .catkin  .rosinstall  setup.fish  setup.sh
devel/.private/rm_eco65_moveit_config/: .catkin
devel/.private/rm_gazebo/: .catkin  .rosinstall  local_setup.sh  setup.fish
devel/.private/rm_gen72_moveit_config/: .catkin  setup.sh
devel/.private/rm_msgs/: .catkin  .rosinstall
devel/.private/rm_vision_control/: .catkin  .rosinstall  local_setup.fish
devel/.private/rml_63_6f_moveit_config/: .catkin  local_setup.fish  setup.sh
devel/.private/rml_63_moveit_config/: .catkin
devel/include/realsense2_camera/: DeviceInfo.h  DeviceInfoRequest.h  DeviceInfoResponse.h  Extrinsics.h  IMUInfo.h  Metadata.h
devel/include/rm_msgs/: ArmState.h  Arm_Analog_Output.h  Arm_Current_State.h  Arm_Current_Status.h  Arm_Digital_Output.h  Arm_IO_State.h  Arm_Joint_Speed_Max.h  Arm_Software_Version.h  Cabinet.h  CartePos.h  CartePosCustom.h  ChangeTool_Name.h  ChangeTool_State.h  ChangeWorkFrame_Name.h  ChangeWorkFrame_State.h  Err.h  ExpandState.h  Expand_In_Position.h  Expand_Position.h  Expand_Speed.h  Flowchartrunstate.h  Force_Position_Move_Joint.h  Force_Position_Move_Pose.h  Force_Position_Move_Pose_Custom.h  Force_Position_State.h  GetArmState_Command.h  Get_TCP_Master_List_Param.h  Gettrajectorylist.h  Gripper_Pick.h  Gripper_Set.h  Hand_Angle.h  Hand_Force.h  Hand_Posture.h  Hand_Seq.h  Hand_Speed.h  Hand_Status.h  IO_Update.h  JointPos.h  JointPosCustom.h  Joint_Current.h  (+57 more)
devel/lib/control_arm_move/: api_Control_Arm_Move_demo
devel/lib/force_position_control/: api_Force_Position_Control_demo
devel/lib/get_arm_state/: api_Get_Arm_State_demo
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  control_arm_move.pc  force_position_control.pc  get_arm_state.pc  realsense2_camera.pc  realsense2_description.pc  rm_65_6f_moveit_config.pc  rm_65_moveit_config.pc  rm_75_6f_moveit_config.pc  rm_75_moveit_config.pc  rm_bringup.pc  rm_control.pc  rm_demo.pc  rm_description.pc  rm_doc.pc  rm_driver.pc  rm_eco63_moveit_config.pc  rm_eco65_6f_moveit_config.pc  rm_eco65_moveit_config.pc  rm_gazebo.pc  rm_gen72_moveit_config.pc  rm_msgs.pc  rm_vision_control.pc  rml_63_6f_moveit_config.pc  rml_63_moveit_config.pc
devel/lib/rm_control/: rm_control
devel/lib/rm_demo/: api_ChangeToolName_demo  api_ChangeWorkFrame_demo  api_Get_Arm_State_demo2  api_gen72_moveJ_P_demo  api_gen72_moveL_demo  api_moveJ_P_demo  api_moveJ_demo  api_moveL_demo  api_teach_demo  arm_63_planning_scene_ros_api_demo  arm_65_planning_scene_ros_api_demo  arm_75_planning_scene_ros_api_demo  arm_eco63_planning_scene_ros_api_demo  arm_eco65_planning_scene_ros_api_demo  arm_gen72_planning_scene_ros_api_demo  getArmState_publisher  planning_scene_ros_api_demo  rm_63_pick_place_demo  rm_65_pick_place_demo  rm_75_pick_place_demo  rm_eco63_pick_place_demo  rm_eco65_pick_place_demo  rm_gen72_pick_place_demo  test_api_movel
devel/lib/rm_driver/: rm_driver
devel/lib/rm_vision_control/: arm_controller.py  crack_detection.py  main_controller.py  monitor_arm_state.py  point_inspection.py  realsense_processor.py  run_all_tests.py  set_arm_pose.py  simplified_main_controller.py  test_arm_camera_integration.py  test_arm_solo.py  test_camera_solo.py  test_task1_full.py  test_vision_solo.py  utils.py  vision_detector.py
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/control_arm_move/cmake/: control_arm_moveConfig-version.cmake  control_arm_moveConfig.cmake
devel/share/force_position_control/cmake/: force_position_controlConfig-version.cmake  (+1 more)
src/rm_control/: CMakeLists.txt  package.xml
src/rm_demo/: CMakeLists.txt
src/rm_demo/scripts/: arm_contrl.py
src/rm_driver/launch/: rm_65_driver.launch  rm_65_test_8088.launch
src/rm_vision_control/: CMakeLists.txt  package.xml  setup.py
src/rm_vision_control/config/: arm_config.yaml  vision_config.yaml
src/rm_vision_control/detection_results/: 19691231_164002_302628.json  19691231_164137_466585.json  19691231_164330_330159.json  19691231_164358_564541.json  19691231_164458_933182.json  19691231_164509_310191.json  19691231_164541_327828.json  20260121_192503_024073.json
src/rm_vision_control/launch/: vision_control.launch
src/rm_vision_control/scripts/: arm_controller.py  main_controller.py  point_inspection.py  simplified_main_controller.py  vision_detector.py
src/rm_vision_control/src/rm_vision_control/: arm_controller.py  crack_detection.py  main_controller.py  point_inspection.py  realsense_processor.py  utils.py  vision_detector.py
(+848 files in other folders)
