<?xml version="1.0"?>
<package format="2">
  <name>rm_vision_control</name>
  <version>0.1.0</version>
  <description>RealMan Robot Vision Control Package - Integration of RM65-B robot with RealSense camera and YOLOv8 for crack detection and inspection tasks</description>

  <!-- 维护者信息 -->
  <maintainer email="nvidia@todo.todo">nvidia</maintainer>

  <!-- 许可证 -->
  <license>Apache 2.0</license>

  <!-- 依赖关系 -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Build Dependencies -->
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rm_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  
  <!-- Build Export Dependencies -->
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rm_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  
  <!-- Execution Dependencies -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rm_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>rm_bringup</exec_depend>
  <exec_depend>rm_control</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  
  <!-- Python 依赖（通过 pip 安装） -->
  <exec_depend>python3-ultralytics</exec_depend>
  <exec_depend>python3-torch</exec_depend>
  
  <!-- 测试依赖 -->
  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>

  <!-- 导出 -->
  <export>

  </export>
</package>